tests/baselines/reference/project/declarationsExportNamespace/amd/declarationsExportNamespace.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== decl.d.ts (0 errors) ====
    export interface A {
        b: number;
    }
    export as namespace moduleA;
==== useModule.ts (0 errors) ====
    module moduleB {
        export interface IUseModuleA {
            a: moduleA.A;
        }
    }